# content-studio

./: .gitignore  README.md  config_routes.py  deploy-prototype.sh  deploy_gh_pages.py  index.html  package-lock.json  package.json  playwright.config.ts  server.py  vite.config.ts
.github/workflows/: build.yml  deploy-web.yml  release.yml
app/: index.html
app-store/: index.html
app-store/assets/: index-CcbsobwT.js  index-n6-rsv7A.css
app/assets/: index-B4nT8NYT.css  index-BTeFfmVu.js  index-Bj764oFr.css  index-CG_TsARI.css  index-D6dckk5w.js
assets/: index-COhqvWFb.css  index-ZSrK7SLE.js
prototypes/login/: index.html
scripts/: bitable.py  config.py  distill.py  publish.py  rewrite.py  scan.py  sync_accounts.py  wechat_crawl.py
sidecar/: main.py  requirements.txt
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: api.ts
src/pages/: CollectPage.tsx  CreatePage.tsx  DashboardPage.tsx  DistillPage.tsx  LibraryPage.tsx  LoginPage.tsx  SettingsPage.tsx
src/stores/: index.ts
tests/: uat.spec.ts  ui.spec.ts
