[package]
name = "content-studio"
version = "1.2.0"
description = "内容工坊 — 公众号对标采集·蒸馏·二创·发布桌面工具"
authors = ["星流"]
edition = "2021"

[lib]
name = "content_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
